--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "image-converter",
+  "name": "fixelate-pro",
   "version": "1.0.0",
-  "description": "",
+  "description": "An image converter and editor",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "electron": "^31.2.1",
-    "electron-builder": "^24.13.3",
-    "electron-reload": "^2.0.0-alpha.1"
-  },
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "adm-zip": "^0.5.14",
-    "bootstrap": "^5.3.3",
-    "cropperjs": "^1.6.2",
-    "sharp": "^0.33.4"
-  }
+    "archiver": "^5.3.0",
+    "cropperjs": "^1.5.12",
+    "electron": "^13.1.7",
+    "sharp": "^0.28.3"
+  },
+  "devDependencies": {},
+  "productName": "Fixelate Pro"
 }
