--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "archiver": "^5.3.0",
     "cropperjs": "^1.5.12",
-    "electron": "^13.1.7",
-    "sharp": "^0.28.3"
+    "electron": "^31.2.1",
+    "jimp": "^0.22.12",
+    "sharp": "^0.33.4"
   },
-  "devDependencies": {},
   "productName": "Fixelate Pro"
 }
